--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryGreen">#009A44</color>
-    <color name="secondaryYellow">#FEDD00</color>
-    <color name="accentRed">#FF0000</color>
+    <color name="primaryBlack">#000000</color>
     
-    <color name="ic_launcher_background">#FFFFFF</color>
+    <color name="logoGreen">#6AA84F</color> 
+    
     <color name="splash_bg">#FFFFFF</color>
-    <color name="status_bar_color">#009A44</color>
+    <color name="status_bar_color">#000000</color>
 </resources>
